--- a/Dockerfile_ui
+++ b/Dockerfile_ui
@@ -2,10 +2,8 @@ FROM python:3.7-slim
 
 WORKDIR /usr/src/app
 
-#Adding files.
 COPY . .
 
-#RUN Step
 RUN apt-get update && apt-get install -y python3-opencv
 RUN pip install opencv-python
 RUN pip install pyzmq
@@ -14,5 +12,5 @@ RUN pip install pyqt5
 
 EXPOSE 8080
 
-#Default running
+# Comando que corre por defecto
 ENTRYPOINT ["python", "main.py"] 
